[package]
name = "gma-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
publish = false

[dependencies]
bincode = "1"
sdl2 = { version = "0.38", features = ["bundled", "static-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false
